# vigiabrasil

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  init-db.sh  prefect.yaml  pyproject.toml
.github/skills/shadcn-frontend-specialist/: SKILL.md
.github/workflows/: deploy.yml
agent/: __init__.py  model.md
clients/: camara.py  x.py
database/: __init__.py  connection.py  models.py  postgres.py  protocols.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/artigos/[id]/: opengraph-image.tsx  page.tsx
frontend/src/app/feed.xml/: route.ts
frontend/src/app/privacidade/: page.tsx
frontend/src/app/termos/: page.tsx
frontend/src/components/: ArtigoCard.tsx  Header.tsx
frontend/src/db/: schema.ts
nginx/: default.conf  local.conf
services/: pdf_extractor.py
tasks/: camara.py
tests/: README.md  conftest.py
tests/unit/: test_camara_client.py  test_database_models.py
